fix: css name clash & added text align helpers

--- a/public/styles/blog.css
+++ b/public/styles/blog.css
@@ -16,11 +16,11 @@ ol li {
 
 #posts h1 { text-align: center; } 
 
-.post img { width: 100%; height: 100%; margin-top: 1em; border: 1px solid var(--color-highlight);}
-.post { max-width: 650px;}
-.post h2 { justify-content: flex-start; margin-top: 2em; margin-bottom: 1em; }
+.post-container { margin: 0 auto; max-width: 600px; }
+.post-container img { width: 100%; height: 100%; margin-top: 1em; border: 1px solid var(--color-highlight);}
 
-/* end coontent styling, begin post items styling */ 
+/* END: post content styling *
+/  BEGIN: post list styling: */ 
 
 .post-list-container {
   /* cursor: pointer; */
