--- a/public/styles/typography.css
+++ b/public/styles/typography.css
@@ -74,6 +74,10 @@ p, .p {
   font-style: normal;
 }
 
+.align-l { text-align: left; }
+.align-c { text-align: center; }
+.align-r { text-align: right; }
+
 .fs-xs {
   font-size: 0.75rem;
 }
