--- a/public/styles/x.css
+++ b/public/styles/x.css
@@ -141,8 +141,6 @@
 }
 
 .content h2 {
-  display: flex;
-  justify-content: center;
   margin-bottom: 1.25em;
 }
 
